--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="grid">
+  <main class="grid">
     <div class="Sedans bg1 font">
       <img src="./images/icon-sedans.svg" alt="Sedan">
       <h1>SEDANS</h1>
@@ -39,7 +39,7 @@
       rental and arrive in style.
       <div class="button color3">Learn More</div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
